<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>

        <import type="com.example.habittrackernew.database.HabitType" />
        <import type="com.example.habittrackernew.binding_methods.EditorBindingMethods"/>

        <variable
            name="viewModel"
            type="com.example.habittrackernew.editor.EditorViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:orientation="vertical"
                android:paddingTop="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/textName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/selector_text_view"
                    android:hint="@string/hintHabitName"
                    android:inputType="text"
                    android:maxLines="1"
                    android:text="@={viewModel.editableHabit.title}"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF"
                    android:textSize="38sp" />

                <RadioGroup
                    android:id="@+id/radioGroupType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:checkedButton="@={EditorBindingMethods.INSTANCE.habitTypeToButtonId(viewModel.editableHabit.type)}">

                    <RadioButton
                        android:id="@+id/radioGood"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_weight="1"
                        android:background="@drawable/selector_radio_button"
                        android:button="@android:color/transparent"
                        android:gravity="center"
                        android:paddingHorizontal="4dp"
                        android:text="@string/GoodHeader"
                        android:textColor="#ffffff"
                        android:textSize="10sp" />

                    <RadioButton
                        android:id="@+id/radioBad"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_weight="1"
                        android:background="@drawable/selector_radio_button"
                        android:button="@android:color/transparent"
                        android:gravity="center"
                        android:paddingHorizontal="4dp"
                        android:text="@string/BadHeader"
                        android:textColor="#ffffff"
                        android:textSize="10sp" />
                </RadioGroup>
            </LinearLayout>


            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintTop_toBottomOf="@id/linearLayout">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="4dp"
                        android:src="@drawable/baseline_rate_review_24"
                        android:tint="@color/colorPrimaryDark"
                        app:layout_constraintBottom_toBottomOf="@+id/textInputDescription"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/textInputDescription" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputDescription"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginTop="4dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/imageView2"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/textDescription"
                            style="@style/Widget.AppCompat.AutoCompleteTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/selector_drop_down_menu"
                            android:hint="@string/hintHabitDescription"
                            android:text="@={viewModel.editableHabit.description}"
                            android:textColorHint="@color/textHintsColor"
                            android:textSize="18sp" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <ImageView
                        android:id="@+id/imagePriority"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="4dp"
                        android:src="@drawable/baseline_whatshot_24"
                        android:tint="@color/colorPrimaryDark"
                        app:layout_constraintBottom_toBottomOf="@+id/textInputPriority"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/textInputPriority" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputPriority"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/imagePriority"
                        app:layout_constraintTop_toBottomOf="@id/textInputDescription">

                        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                            android:id="@+id/textPriority"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/selector_drop_down_menu"
                            android:filterTouchesWhenObscured="false"
                            android:editable="false"
                            android:hint="@string/hintPriority"
                            android:inputType="text"
                            android:text="@={EditorBindingMethods.INSTANCE.priorityToText(viewModel.editableHabit.priority)}"
                            android:textColorHint="@color/textHintsColor" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <ImageView
                        android:id="@+id/imageFrequency"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="4dp"
                        android:src="@drawable/baseline_date_range_24"
                        android:tint="@color/colorPrimaryDark"
                        app:layout_constraintBottom_toBottomOf="@id/textInputFrequency"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/textInputFrequency" />


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputFrequency"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintStart_toEndOf="@+id/imageFrequency"
                        app:layout_constraintTop_toBottomOf="@id/textInputPriority">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/textRepeatCount"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/selector_drop_down_menu"
                            android:hint="@string/hintCountRepeat"
                            android:inputType="number"
                            android:text='@={EditorBindingMethods.INSTANCE.habitCountToText(viewModel.editableHabit.count)}'
                            android:textAlignment="center"
                            android:textColorHint="@color/textHintsColor" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/labelTimes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:text="@string/labelTimes"
                        android:textColor="@color/textHintsColor"
                        app:layout_constraintBottom_toBottomOf="@+id/textInputFrequency"
                        app:layout_constraintEnd_toStartOf="@+id/textInputPeriod"
                        app:layout_constraintStart_toEndOf="@+id/textInputFrequency"
                        app:layout_constraintTop_toTopOf="@+id/textInputFrequency" />


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputPeriod"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/labelTimes"
                        app:layout_constraintTop_toBottomOf="@id/textInputPriority">

                        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                            android:id="@+id/textPeriod"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/selector_drop_down_menu"
                            android:editable="false"
                            android:text="@={EditorBindingMethods.INSTANCE.frequencyToText(viewModel.editableHabit.frequency)}"
                            android:inputType="text"
                            android:textAlignment="center"
                            android:textColorHint="@color/textHintsColor" />
                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSaveHabit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:text="@string/save"
                android:onClick="@{()->viewModel.saveHabit()}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardViewDescription" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
